--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<p><a href="index.xhtml">ToC</a></p>
-
+		<p>You can use http://sulky.sourceforge.net/repository/ and http://lilith.sourceforge.net/repository/ until
+		I have time to organize deployment to the central maven repository.</p>
+		
 		<h1><a name="top">Using the Lilith Classic Appender</a></h1>
 
 		<p>The Lilith Classic Appender is a replacement for <tt>ch.qos.logback.classic.net.SocketAppender</tt>.
