--- a/lilith/src/main/resources/help/access-appender.xhtml
+++ b/lilith/src/main/resources/help/access-appender.xhtml
@@ -10,6 +10,9 @@
 	<body>
 		<p><a href="index.xhtml">ToC</a></p>
 
+		<p>You can use http://sulky.sourceforge.net/repository/ and http://lilith.sourceforge.net/repository/ until
+		I have time to organize deployment to the central maven repository.</p>
+
 		<h1><a name="top">Using the Lilith Access Appender</a></h1>
 
 		<p>The Lilith Access Appender is a replacement for <tt>ch.qos.logback.access.net.SocketAppender</tt>.
