--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -13,6 +13,9 @@
 		<h1><a name="top">Known Problems</a></h1>
 
 		<ul>
+			<li>Preferences dialog is obviously not finished right now :)</li>
+			<li>Sulky and Lilith artifacts aren't deployed to central maven repository yet, you may use
+			http://sulky.sourceforge.net/repository/ and http://lilith.sourceforge.net/repository/ for now.</li>
 			<li>The 'Send to' functionality isn't working as expected if the network infrastructure changes.
 				It should work but doesn't. I think it's a JmDNS problem but I have to investigate further.</li>
 			<li>The 'Edit groovy!' functionality is currently broken. Just don't use it.
