Added help about groovy filters.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@50 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -22,6 +22,7 @@
 				</ul>
 			</li>
 			<li><a href="detailsView.xhtml">Customizing details view of event</a></li>
+      <li><a href="filters.xhtml">Custom Groovy filters</a></li>
 			<li><a href="idea.xhtml">IDEA integration</a></li>
 			<li><a href="story.xhtml">The story of Lilith</a></li>
 			<li><a href="used-software.xhtml">Used Software</a></li>
