Added "FAQ" and updated "Known Problems".
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@72 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -25,6 +25,7 @@
       <li><a href="filters.xhtml">Custom Groovy filters</a></li>
 			<li><a href="idea.xhtml">IDEA integration</a></li>
 			<li><a href="story.xhtml">The story of Lilith</a></li>
+            <li><a href="faq.xhtml">FAQ</a></li>
 			<li><a href="used-software.xhtml">Used Software</a></li>
 			<li><a href="knownProblems.xhtml">Known Problems</a></li>
 		</ul>
