--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -13,7 +13,11 @@
 		<h2>Table of Content</h2>
 
 		<ul>
+            <li><a href="story.xhtml">The story of Lilith</a></li>
 			<li><a href="keyboard.xhtml">Keyboard</a></li>
+            <li><a href="conditions.xhtml">Conditions</a></li>
+            <li><a href="sources.xhtml">Sources &amp; Source-Lists</a></li>
+
 			<li><a href="producers.xhtml">Event producers</a></li>
 			<li>Appender configuration
 				<ul>
@@ -22,9 +26,7 @@
 				</ul>
 			</li>
 			<li><a href="detailsView.xhtml">Customizing details view of event</a></li>
-      <li><a href="filters.xhtml">Custom Groovy filters</a></li>
 			<li><a href="idea.xhtml">IDEA integration</a></li>
-			<li><a href="story.xhtml">The story of Lilith</a></li>
             <li><a href="faq.xhtml">FAQ</a></li>
 			<li><a href="used-software.xhtml">Used Software</a></li>
 			<li><a href="knownProblems.xhtml">Known Problems</a></li>
