Using combined condition instead of only the currently active filter condition while saving a condition. Updated documentation. Using condition name in tab if available.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@79 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -16,7 +16,7 @@
             <li><a href="story.xhtml">The story of Lilith</a></li>
 			<li><a href="keyboard.xhtml">Keyboard</a></li>
             <li><a href="conditions.xhtml">Conditions</a></li>
-            <li><a href="sources.xhtml">Sources &amp; Source-Lists</a></li>
+            <li><a href="sources.xhtml">Sources, Source-Names &amp; Source-Lists</a></li>
 
 			<li><a href="producers.xhtml">Event producers</a></li>
 			<li>Appender configuration
