--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -74,6 +74,9 @@ APPLE/COMMAND on Mac</p>
 
 			<dt>*command*-B</dt>
 			<dd>Edit source name of the current view.</dd>
+
+            <dt>*command*-I</dt>
+            <dd>Add the current filter.</dd>
 		</dl>
 
 
