--- a/lilith/src/main/resources/help/conditions.xhtml
+++ b/lilith/src/main/resources/help/conditions.xhtml
@@ -11,7 +11,45 @@
 		<p><a href="index.xhtml">ToC</a></p>
 
 		<h1><a name="top">Conditions</a></h1>
-        <h2>Custom Groovy conditions</h2>
+        <p>
+            Lilith supports several types of conditions:
+        </p>
+        <ul>
+            <li>event.contains<br/>
+                This is generally the most desired case. It checks if any field of the event contains the given string.
+                While being the most general, it's also the one with the poorest performance, for the same reason.<br/>
+                This condition is the default condition of the search panel.
+            </li>
+            <li>message.contains<br/>
+                Checks only if the message of the logging event contains the given string.<br/>
+                It will only return a positive result in case of logging events because access events don't have
+                a message.
+            </li>
+            <li>logger.startsWith<br/>
+                Checks only if the logger name of the logging event starts with the given string.<br/>
+                This condition is useful to select a subset of events based on the package name of the logging class.<br/>
+                It will only return a positive result in case of logging events because access events don't have
+                a logger name.
+            </li>
+            <li>logger.equals<br/>
+                Checks only if the logger name of the logging event equals the given string.<br/>
+                It will only return a positive result in case of logging events because access events don't have
+                a logger name.
+            </li>
+            <li><a href="#saved">Saved conditions</a></li>
+            <li><a href="#groovy">Custom Groovy conditions</a></li>
+        </ul>
+        <p><a href="#top">Back to top.</a></p>
+
+        <h2><a  name="saved">Saved conditions</a></h2>
+        <p>It's possible to save conditions using "View" =&gt; "Add condition...".
+            The shortcut for this functionality is *command*-I.<br/>
+            Such saved conditions can be (re)used by entering "#condition#&lt;conditionName&gt;" into the search box.</p>
+        <p>Beside that, saved conditions also have the effect that their name is used as the title of a
+            filtered views tab instead of the (most likely much longer) string representation of the condition.</p>
+        <p><a href="#top">Back to top.</a></p>
+
+        <h2><a  name="groovy">Custom Groovy conditions</a></h2>
 
 		<p>It is possible to create complex conditions in Groovy.
       The scripts must be created in "[lilith.home]/conditions" and must have a ".groovy" extension.</p>
