--- a/lilith/src/main/resources/help/faq.xhtml
+++ b/lilith/src/main/resources/help/faq.xhtml
@@ -19,7 +19,7 @@
                 breaks my current implementation of parsing. Since I parse the STEs both during receiving of original
                 Logback events and during creation of Lilith events in the multiplex appender, the parsing means a
                 significant performance impact. Previously, I circumvented this by using a hack and accessing the STEs
-                directly but this would noe have the downside that I wouldn't be able to retrieve the formerly mentioned
+                directly but this would now have the downside that I wouldn't be able to retrieve the formerly mentioned
                 version information.<br/>
                 Because of that, I suggested a change to the Logback codebase that would make my life quite a bit easier
                 while it wouldn't have a negative impact on the rest. It could even increase the general logging speed
