Uodated usedSoftware documentation and dependencies.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@94 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -19,7 +19,7 @@
 				<th>Name</th>
 				<th>License</th>
 			</tr>
-			
+
 			<tr>
 				<td><a href="http://ant.apache.org">Apache Ant</a></td>
 				<td><a href="http://ant.apache.org/license.html">The Apache Software License Version, Version 2.0</a></td>
@@ -35,24 +35,29 @@
 				<td><a href="http://asm.objectweb.org/license.html">http://asm.objectweb.org/license.html</a></td>
 			</tr>
 
+            <tr>
+                <td><a href="http://excalibur.apache.org/index.html">Avalon Framework</a></td>
+                <td><a href="http://excalibur.apache.org/license.html">The Apache Software License Version, Version 2.0</a></td>
+            </tr>
+
 			<tr>
 				<td><a href="http://commons.apache.org/cli/">Commons CLI</a></td>
 				<td><a href="http://commons.apache.org/cli/license.html">The Apache Software License Version, Version 2.0</a></td>
 			</tr>
 
 			<tr>
-				<td><a href="http://commons.apache.org/io/">Commons IO</a></td>
-				<td><a href="http://commons.apache.org/io/license.html">The Apache Software License Version, Version 2.0</a></td>
+				<td><a href="http://hc.apache.org/httpclient-3.x/">Commons HttpClient</a></td>
+				<td><a href="http://hc.apache.org/httpclient-3.x/license.html">The Apache Software License Version, Version 2.0</a></td>
 			</tr>
+
+            <tr>
+                <td><a href="http://commons.apache.org/io/">Commons IO</a></td>
+                <td><a href="http://commons.apache.org/io/license.html">The Apache Software License Version, Version 2.0</a></td>
+            </tr>
 
 			<tr>
 				<td><a href="http://commons.apache.org/lang/">Commons Lang</a></td>
 				<td><a href="http://commons.apache.org/lang/license.html">The Apache Software License Version, Version 2.0</a></td>
-			</tr>
-
-			<tr>
-				<td><a href="http://commons.apache.org/logging/">commons-logging</a></td>
-				<td><a href="http://commons.apache.org/logging/license.html">The Apache Software License Version, Version 2.0</a></td>
 			</tr>
 
 			<tr>
@@ -69,6 +74,11 @@
 				<td><a href="http://groovy.codehaus.org/">Groovy</a></td>
 				<td><a href="http://svn.groovy.codehaus.org/browse/~raw,r=6114/groovy/trunk/groovy/groovy-core/LICENSE.txt">The Apache Software License Version, Version 2.0</a></td>
 			</tr>
+
+            <tr>
+                <td><a href="http://ant.apache.org/ivy/">Ivy</a></td>
+                <td><a href="http://ant.apache.org/ivy/license.html">The Apache Software License Version, Version 2.0</a></td>
+            </tr>
 
 			<tr>
 				<td><a href="http://slf4j.org/">SLF4J</a></td>
