Fixed author email address *sigh* Added blurb about the origin of the splash screen.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@129 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -134,6 +134,9 @@
 
 		<p>If something is missing from the above list it's not a license breach but a bug ;-) and you should report it.</p>
 
+		<p>The <a href="http://en.wikipedia.org/wiki/File:Lilith_(John_Collier_painting).jpg">image</a> 
+		used in the splash screen is a painting by John Collier. It's in the public
+		domain because the copyright has expired.</p>
 		<p><a href="#top">Back to top.</a></p>
 	</body>
 </html>
