Added progress indicator to task message in status line.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@226 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -141,6 +141,8 @@
 
 <p>If something is missing from the above list it's not a license breach but a bug ;-) and you should report it.</p>
 
+<p>The progress indicators were created using <a href="http://www.ajaxload.info/">Ajaxload</a>.</p>
+
 <p>The <a href="http://en.wikipedia.org/wiki/File:Lilith_(John_Collier_painting).jpg">image</a>
 	used in the splash screen is a painting by John Collier. It's in the public
 	domain because the copyright has expired.</p>
