--- a/lilith/src/main/resources/help/sources.xhtml
+++ b/lilith/src/main/resources/help/sources.xhtml
@@ -42,8 +42,8 @@
 <h2><a name="sourceLists">Source-Lists</a></h2>
 
 <p>Source-Lists can be used to either white- or black-list on the contained sources.<br/>
-	In case of white-listing, only events from sources <b>contained</b> in the selected source list are accepted.<br/>
-	In case of black-listing, only events from sources <b>not contained</b> in the selected source list are
+	In case of white-listing, only events from sources <strong>contained</strong> in the selected source list are accepted.<br/>
+	In case of black-listing, only events from sources <strong>not contained</strong> in the selected source list are
 	accepted.<br/>
 </p>
 
