--- a/lilith/src/main/resources/licenses/lgplv3.html
+++ b/lilith/src/main/resources/licenses/lgplv3.html
@@ -16,7 +16,7 @@
 	the terms and conditions of version 3 of the GNU General Public
 	License, supplemented by the additional permissions listed below.</p>
 
-<h4><a name="section0"></a>0. Additional Definitions.</h4>
+<h4><a name="section0">0. Additional Definitions.</a></h4>
 
 <p>As used herein, &ldquo;this License&rdquo; refers to version 3 of the GNU Lesser
 	General Public License, and the &ldquo;GNU GPL&rdquo; refers to version 3 of the GNU
@@ -45,12 +45,12 @@
 	and utility programs needed for reproducing the Combined Work from the
 	Application, but excluding the System Libraries of the Combined Work.</p>
 
-<h4><a name="section1"></a>1. Exception to Section 3 of the GNU GPL.</h4>
+<h4><a name="section1">1. Exception to Section 3 of the GNU GPL.</a></h4>
 
 <p>You may convey a covered work under sections 3 and 4 of this License
 	without being bound by section 3 of the GNU GPL.</p>
 
-<h4><a name="section2"></a>2. Conveying Modified Versions.</h4>
+<h4><a name="section2">2. Conveying Modified Versions.</a></h4>
 
 <p>If you modify a copy of the Library, and, in your modifications, a
 	facility refers to a function or data to be supplied by an Application
@@ -70,7 +70,7 @@
 	</li>
 </ul>
 
-<h4><a name="section3"></a>3. Object Code Incorporating Material from Library Header Files.</h4>
+<h4><a name="section3">3. Object Code Incorporating Material from Library Header Files.</a></h4>
 
 <p>The object code form of an Application may incorporate material from
 	a header file that is part of the Library. You may convey such object
@@ -90,7 +90,7 @@
 	</li>
 </ul>
 
-<h4><a name="section4"></a>4. Combined Works.</h4>
+<h4><a name="section4">4. Combined Works.</a></h4>
 
 <p>You may convey a Combined Work under terms of your choice that,
 	taken together, effectively do not restrict modification of the
@@ -150,7 +150,7 @@
 	</li>
 </ul>
 
-<h4><a name="section5"></a>5. Combined Libraries.</h4>
+<h4><a name="section5">5. Combined Libraries.</a></h4>
 
 <p>You may place library facilities that are a work based on the
 	Library side by side in a single library together with other library
@@ -170,7 +170,7 @@
 	</li>
 </ul>
 
-<h4><a name="section6"></a>6. Revised Versions of the GNU Lesser General Public License.</h4>
+<h4><a name="section6">6. Revised Versions of the GNU Lesser General Public License.</a></h4>
 
 <p>The Free Software Foundation may publish revised and/or new versions
 	of the GNU Lesser General Public License from time to time. Such new
