Updated help. Added link to groovy.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@241 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/detailsView.xhtml
+++ b/lilith/src/main/resources/help/detailsView.xhtml
@@ -22,6 +22,8 @@
 <p>If you destroy this file, somehow, then simply delete it entirely and restart Lilith. The original detailsView.groovy
 	file will be restored.</p>
 
+<p>See <a href="http://groovy.codehaus.org/">http://groovy.codehaus.org/</a> for help on Groovy.</p>
+
 <p><a href="#top">Back to top.</a></p>
 </body>
 </html>
