Updated Logging schema. Fixes ticket:42.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@246 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -45,8 +45,10 @@
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
-<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies here:<br/>
-<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic/dependencies.html</a></p>
+<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies
+	here:<br/>
+	<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic/dependencies.html</a>
+</p>
 
 
 <p>Then, add the following to your <code>logback.xml</code> file:</p>
@@ -91,7 +93,7 @@
 	event receiver available in the Lilith suite.</p>
 
 <p>The schema of the logging events can be found at
-	<a href="http://lilith.sf.net/logging/10">http://lilith.sf.net/logging/10</a>.</p>
+	<a href="http://lilith.sf.net/schema/logging/13">http://lilith.sf.net/schema/logging/13</a>.</p>
 
 <p>Add the following dependency to your applications <code>pom.xml</code> file:</p>
 		<pre><code><![CDATA[<dependency>
@@ -101,8 +103,10 @@
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
-<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies here:<br/>
-<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic-xml/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic-xml/dependencies.html</a></p>
+<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies
+	here:<br/>
+	<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic-xml/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.appender.multiplex-classic-xml/dependencies.html</a>
+</p>
 
 <p>Then, add the following to your <code>logback.xml</code> file:</p>
 		<pre><code><![CDATA[<appender name="multiplex" class="de.huxhorn.lilith.logback.appender.ClassicXmlMultiplexSocketAppender">
@@ -135,8 +139,10 @@
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
-<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies here:<br/>
-<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.servlet/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.servlet/dependencies.html</a></p>
+<p>If you aren't using <a href="http://maven.apache.org">Maven</a> you can find a list of all required dependencies
+	here:<br/>
+	<a href="http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.servlet/dependencies.html">http://lilith.huxhorn.de/projects/de.huxhorn.lilith.logback.servlet/dependencies.html</a>
+</p>
 
 <p>Then add the following to your <code>web.xml</code> file.</p>
 
