--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -12,22 +12,24 @@
 
 <h1><a name="top">Keyboard</a></h1>
 
-<p>*command* is the system dependent command key, e.g. CTRL for Windows and
+<p>&#8984; represents the system dependent command key, e.g. CTRL for Windows and
 	APPLE/COMMAND on Mac</p>
+
+<p>&#8679; represents Shift.</p>
 
 
 <h2>General</h2>
 
 <dl>
-	<dt>*command*-SHIFT-O</dt>
+	<dt>&#8984;&#8679; O</dt>
 	<dd>Open inactive log...</dd>
 </dl>
 <dl>
-	<dt>*command*-SHIFT-X</dt>
+	<dt>&#8984;&#8679; X</dt>
 	<dd>Remove all inactive logs</dd>
 </dl>
 <dl>
-	<dt>*command*-Q</dt>
+	<dt>&#8984; Q</dt>
 	<dd>Exit. Quit. No, I won't ask you for permission.</dd>
 </dl>
 
@@ -35,22 +37,25 @@
 <h2>View related</h2>
 
 <dl>
-	<dt>*command*-1</dt>
+	<dt>&#8984; 1</dt>
 	<dd>Opens the global logging view.</dd>
 
-	<dt>*command*-2</dt>
+	<dt>&#8984; 2</dt>
 	<dd>Opens the global access view.</dd>
 
-	<dt>*command*-R</dt>
+	<dt>&#8984; 0</dt>
+	<dd>Opens the internal Lilith logging view.</dd>
+
+	<dt>&#8984; R</dt>
 	<dd>Remove inactive views.</dd>
 	<!--
-			 <dt>*command*-SHIFT-R</dt>
+			 <dt>&#8984;-&#8679;-R</dt>
 			 <dd>Clear and remove inactive views.</dd>
  -->
-	<dt>*command*-T</dt>
+	<dt>&#8984; T</dt>
 	<dd>Toggles tailing ("scroll to bottom"-funtionality).</dd>
 
-	<dt>*command*-P</dt>
+	<dt>&#8984; P</dt>
 	<dd>Pause/Unpause view.<br/>
 		If the view is paused, events are still received in the background,
 		i.e. no events are lost while the view is paused.
@@ -59,22 +64,22 @@
 	<dt>???</dt>
 	<dd>Clear view.</dd>
 
-	<dt>*command*-SHIFT-A</dt>
+	<dt>&#8984;&#8679; A</dt>
 	<dd>Attach/detach view.</dd>
 
-	<dt>*command*-SHIFT-D</dt>
+	<dt>&#8984;&#8679; D</dt>
 	<dd>Disconnect - terminates the connection.</dd>
 
-	<dt>*command*-M</dt>
+	<dt>&#8984; M</dt>
 	<dd>Focus message.</dd>
 
-	<dt>*command*-E</dt>
+	<dt>&#8984; E</dt>
 	<dd>Focus events.</dd>
 
-	<dt>*command*-B</dt>
+	<dt>&#8984; B</dt>
 	<dd>Edit source name of the current view.</dd>
 
-	<dt>*command*-I</dt>
+	<dt>&#8984; I</dt>
 	<dd>Add the current filter.</dd>
 </dl>
 
@@ -82,20 +87,20 @@
 <h2>Tab related</h2>
 
 <dl>
-	<dt>*command*-W</dt>
+	<dt>&#8984; W</dt>
 	<dd>Close the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>*command*-SHIFT-W</dt>
+	<dt>&#8984;&#8679; W</dt>
 	<dd>Close all but the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>*command*-J</dt>
+	<dt>&#8984; J</dt>
 	<dd>Select previous tab.</dd>
 
-	<dt>*command*-K</dt>
+	<dt>&#8984; K</dt>
 	<dd>Select next tab.</dd>
 </dl>
 
@@ -103,13 +108,13 @@
 <h2>Find related</h2>
 
 <dl>
-	<dt>*command*-F</dt>
+	<dt>&#8984; F</dt>
 	<dd>Show find panel and focus find textfield.</dd>
 
-	<dt>*command*-G</dt>
+	<dt>&#8984; G</dt>
 	<dd>Find previous match.</dd>
 
-	<dt>*command*-SHIFT-G</dt>
+	<dt>&#8984;&#8679; G</dt>
 	<dd>Find next match.</dd>
 
 	<dt>???</dt>
@@ -121,7 +126,7 @@
 	<dt>ENTER (if in find textfield)</dt>
 	<dd>Create a new tab with the current filter.</dd>
 
-	<dt>SHIFT-ENTER (if in find textfield)</dt>
+	<dt>&#8679; ENTER (if in find textfield)</dt>
 	<dd>Replace filter of the current tab with the current filter.<br/>
 		Opens a new tab, too, if the current tab is the unfiltered tab.
 	</dd>
