--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -14,6 +14,7 @@
 
 <ul>
 	<li><a href="story.xhtml">The story of Lilith</a></li>
+	<li><a href="contact.xhtml">Contact, Feature Requests, Bug Reports...</a></li>
 	<li><a href="keyboard.xhtml">Keyboard</a></li>
 	<li><a href="conditions.xhtml">Conditions</a></li>
 	<li><a href="sources.xhtml">Sources, Source-Names &amp; Source-Lists</a></li>
