Added missing contact.xhtml *sigh* and added another example groovy condition that uses a regex to match the message of an event.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@265 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/conditions.xhtml
+++ b/lilith/src/main/resources/help/conditions.xhtml
@@ -132,6 +132,35 @@ if(event instanceof LoggingEvent)
 }
 return false;</code></pre>
 
+<h3>Example 4: Match logging events with a message matching the regex given as searchString</h3>
+<pre><code>/**
+ * Returns true if the logging events message matches the regex 
+ * given as searchString.
+ */
+import de.huxhorn.lilith.data.logging.LoggingEvent;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
+
+def event = input?.event;
+
+if(event instanceof LoggingEvent)
+{
+	try
+	{
+		def pattern = Pattern.compile(searchString);
+		def message = event.message.message;
+		if(message)
+		{
+			return message ==~ pattern; // short for pattern.matcher(message).matches();
+		}
+	}
+	catch(PatternSyntaxException ex)
+	{
+		// ignore, returns false
+	}
+}
+return false;</code></pre>
 
 <p><a href="#top">Back to top.</a></p>
 </body>
