--- a/lilith/src/main/resources/help/conditions.xhtml
+++ b/lilith/src/main/resources/help/conditions.xhtml
@@ -110,6 +110,12 @@ import de.huxhorn.lilith.data.logging.LoggingEvent;
 
 def event = input?.event;
 
+if(searchString == null || '' == searchString)
+{
+  // so no string doesn't filter anything
+  return true;
+}
+
 if(event instanceof LoggingEvent)
 {
   def level = event.level;
@@ -144,21 +150,27 @@ import java.util.regex.PatternSyntaxException;
 
 def event = input?.event;
 
+if(searchString == null || '' == searchString)
+{
+  // so no string doesn't filter anything
+  return true;
+}
+
 if(event instanceof LoggingEvent)
 {
-	try
-	{
-		def pattern = Pattern.compile(searchString);
-		def message = event.message.message;
-		if(message)
-		{
-			return message ==~ pattern; // short for pattern.matcher(message).matches();
-		}
-	}
-	catch(PatternSyntaxException ex)
-	{
-		// ignore, returns false
-	}
+  try
+  {
+    def pattern = Pattern.compile(searchString);
+    def message = event.message.message;
+    if(message)
+    {
+      return message ==~ pattern; // short for pattern.matcher(message).matches();
+    }
+  }
+  catch(PatternSyntaxException ex)
+  {
+    // ignore, returns false
+  }
 }
 return false;</code></pre>
 
