Changed twitter account from lilith to lilithapp.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@307 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/contact.xhtml
+++ b/lilith/src/main/resources/help/contact.xhtml
@@ -19,7 +19,7 @@
 
 <p>You can subscribe to one of the mailinglists. You can subscribe to them from the <a href="http://sourceforge.net/projects/lilith/">Lilith project page</a>.</p>
 
-<p>You may also follow <a href="http://twitter.com/lilith">Lilith</a> on Twitter if you like.</p>
+<p>You may also follow <a href="http://twitter.com/lilithapp">lilithapp</a> on Twitter if you like.</p>
 
 <p>Lastly, you can simply <a href="mailto:contact@lilith.huxhorn.de">write me a mail</a>.</p>
 
