--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -81,8 +81,13 @@
 
 	<dt>&#8984; I</dt>
 	<dd>Add the current filter.</dd>
-</dl>
 
+	<dt>&#8984; .</dt>
+	<dd>Zoom in</dd>
+
+	<dt>&#8984;&#8679; .</dt>
+	<dd>Zoom out</dd>
+</dl>
 
 <h2>Tab related</h2>
 
