Updated keyboard help. Better symbol for "Ctrl"/"cmd".
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@319 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -12,24 +12,25 @@
 
 <h1><a name="top">Keyboard</a></h1>
 
-<p>&#8984; represents the system dependent command key, e.g. CTRL for Windows and
-	APPLE/COMMAND on Mac</p>
+<p>&#8963; represents the system dependent command key, e.g. "Ctrl" on Windows and
+	"cmd &#8984;" on Mac</p>
 
-<p>&#8679; represents Shift.</p>
+<p>&#8679; represents "Shift".</p>
 
+<p>&#8629; represents "Enter" or "Return".</p>
 
 <h2>General</h2>
 
 <dl>
-	<dt>&#8984;&#8679; O</dt>
+	<dt>&#8963;&#8679; O</dt>
 	<dd>Open inactive log...</dd>
 </dl>
 <dl>
-	<dt>&#8984;&#8679; X</dt>
+	<dt>&#8963;&#8679; X</dt>
 	<dd>Remove all inactive logs</dd>
 </dl>
 <dl>
-	<dt>&#8984; Q</dt>
+	<dt>&#8963; Q</dt>
 	<dd>Exit. Quit. No, I won't ask you for permission.</dd>
 </dl>
 
@@ -37,75 +38,77 @@
 <h2>View related</h2>
 
 <dl>
-	<dt>&#8984; 1</dt>
+	<dt>&#8963; 1</dt>
 	<dd>Opens the global logging view.</dd>
 
-	<dt>&#8984; 2</dt>
+	<dt>&#8963; 2</dt>
 	<dd>Opens the global access view.</dd>
 
-	<dt>&#8984; 0</dt>
+	<dt>&#8963; 0</dt>
 	<dd>Opens the internal Lilith logging view.</dd>
 
-	<dt>&#8984; R</dt>
+	<dt>&#8963; R</dt>
 	<dd>Remove inactive views.</dd>
-	<!--
-			 <dt>&#8984;-&#8679;-R</dt>
-			 <dd>Clear and remove inactive views.</dd>
- -->
-	<dt>&#8984; T</dt>
+<!--
+	 <dt>&#8963;-&#8679;-R</dt>
+	 <dd>Clear and remove inactive views.</dd>
+-->
+	<dt>&#8963; T</dt>
 	<dd>Toggles tailing ("scroll to bottom"-funtionality).</dd>
 
-	<dt>&#8984; P</dt>
+	<dt>&#8963; P</dt>
 	<dd>Pause/Unpause view.<br/>
 		If the view is paused, events are still received in the background,
 		i.e. no events are lost while the view is paused.
 	</dd>
 
+<!--
 	<dt>???</dt>
 	<dd>Clear view.</dd>
+-->
 
-	<dt>&#8984;&#8679; A</dt>
+	<dt>&#8963;&#8679; A</dt>
 	<dd>Attach/detach view.</dd>
 
-	<dt>&#8984;&#8679; D</dt>
+	<dt>&#8963;&#8679; D</dt>
 	<dd>Disconnect - terminates the connection.</dd>
 
-	<dt>&#8984; M</dt>
+	<dt>&#8963; M</dt>
 	<dd>Focus message.</dd>
 
-	<dt>&#8984; E</dt>
+	<dt>&#8963; E</dt>
 	<dd>Focus events.</dd>
 
-	<dt>&#8984; B</dt>
+	<dt>&#8963; B</dt>
 	<dd>Edit source name of the current view.</dd>
 
-	<dt>&#8984; I</dt>
+	<dt>&#8963; I</dt>
 	<dd>Add the current filter.</dd>
 
-	<dt>&#8984; .</dt>
+	<dt>&#8963; .</dt>
 	<dd>Zoom in</dd>
 
-	<dt>&#8984;&#8679; .</dt>
+	<dt>&#8963;&#8679; .</dt>
 	<dd>Zoom out</dd>
 </dl>
 
 <h2>Tab related</h2>
 
 <dl>
-	<dt>&#8984; W</dt>
+	<dt>&#8963; W</dt>
 	<dd>Close the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>&#8984;&#8679; W</dt>
+	<dt>&#8963;&#8679; W</dt>
 	<dd>Close all but the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>&#8984; J</dt>
+	<dt>&#8963; J</dt>
 	<dd>Select previous tab.</dd>
 
-	<dt>&#8984; K</dt>
+	<dt>&#8963; K</dt>
 	<dd>Select next tab.</dd>
 </dl>
 
@@ -113,25 +116,27 @@
 <h2>Find related</h2>
 
 <dl>
-	<dt>&#8984; F</dt>
+	<dt>&#8963; F</dt>
 	<dd>Show find panel and focus find textfield.</dd>
 
-	<dt>&#8984; G</dt>
+	<dt>&#8963; G</dt>
 	<dd>Find previous match.</dd>
 
-	<dt>&#8984;&#8679; G</dt>
+	<dt>&#8963;&#8679; G</dt>
 	<dd>Find next match.</dd>
 
+<!--
 	<dt>???</dt>
 	<dd>Cancel find operation.</dd>
-
-	<dt>ESCAPE (if find panel is visible)</dt>
+-->
+	
+	<dt>Esc (if find panel is visible)</dt>
 	<dd>Close find panel.</dd>
 
-	<dt>ENTER (if in find textfield)</dt>
+	<dt>&#8629; (if in find textfield)</dt>
 	<dd>Create a new tab with the current filter.</dd>
 
-	<dt>&#8679; ENTER (if in find textfield)</dt>
+	<dt>&#8679; &#8629; (if in find textfield)</dt>
 	<dd>Replace filter of the current tab with the current filter.<br/>
 		Opens a new tab, too, if the current tab is the unfiltered tab.
 	</dd>
