Added blurb about mousewheel-zooming.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@320 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -85,10 +85,10 @@
 	<dt>&#8963; I</dt>
 	<dd>Add the current filter.</dd>
 
-	<dt>&#8963; .</dt>
+	<dt>&#8963; . (also &#8963; [mouse wheel up])</dt>
 	<dd>Zoom in</dd>
 
-	<dt>&#8963;&#8679; .</dt>
+	<dt>&#8963;&#8679; . (also &#8963; [mouse wheel down])</dt>
 	<dd>Zoom out</dd>
 </dl>
 
