Updated protobuf to 2.2.0.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@334 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -123,6 +123,10 @@
 			 </tr>
  -->
 	<tr>
+		<td><a href="http://code.google.com/p/protobuf/">Protocol Buffers - Google's data interchange format (protobuf)</a></td>
+		<td><a href="http://www.opensource.org/licenses/bsd-license.php">New BSD License</a></td>
+	</tr>
+	<tr>
 		<td><a href="https://rrd4j.dev.java.net/">RRD4J</a></td>
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
