--- a/lilith/src/main/resources/tips/1.xhtml
+++ b/lilith/src/main/resources/tips/1.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <p>
-	You can save the current filter using &#8963; I.<br/>
+	1 - You can save the current filter using &#8963; I.<br/>
 	See <a href="help://conditions.xhtml">help</a> for more info...
 </p>
 </body>
